
2013-01-25  Frank Siegert  <frank.siegert@cern.ch>

	* Split MC_*JETS analyses into three separate bits:
	MC_*INC (inclusive properties)
	MC_*JETS (jet properties)
	MC_*KTSPLITTINGS (kT splitting scales).

2013-01-22  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix TeX variable in the rivetenv scripts, especially for csh

2012-12-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1188891 analysis

	* Added ATLAS_2012_I1118269 analysis

	* Added CMS_2012_I1184941 analysis

	* Added LHCB_2010_I867355 analysis

	* Added TGraphErrors support to root2flat

2012-11-27  Andy Buckley  <andy.buckley@cern.ch>

	* Converting CMS_2012_I1102908 analysis to use YODA.

	* Adding XLabel and YLabel setting in histo/profile/scatter booking.

2012-11-27  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix make-plots png creation for SL5

2012-11-23  Peter Richardson <peter.richardson@durham.ac.uk>

	* Added ATLAS_2012_CONF_2012_153 4-lepton SUSY search

2012-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PHOTONS by Steve Lloyd and AB, for testing general
	unisolated photon properties, especially those associated with
	charged leptons (e and mu).

2012-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding MC_PRINTEVENT, a convenient (but verbose!) analysis for
	printing out event details to stdout.

2012-11-15  Andy Buckley  <andy.buckley@cern.ch>

	* Removing the long-unused/defunct autopackage system.

2012-11-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added LHCF_2012_I1115479 analysis
	* Added ATLAS_2011_I894867 analysis

2012-11-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1102908 analysis

2012-11-14  Andy Buckley  <andy.buckley@cern.ch>

	* Converting the argument order of logspace, clarifying the
	arguments, updating affected code, and removing Analysis::logBinEdges.

	* Merging updates from the AIDA maintenance branch up to r4002
	(latest revision for next merges is r4009).

2012-11-11  Andy Buckley  <andy.buckley@cern.ch>
