@@ -1,0 +1,28 @@
+# BEGIN PLOT /ALICE_2012_I1181770/d
+XLabel=$\sqrt{s}$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /ALICE_2012_I1181770/d01-x01-y0
+Title=Production ratios of SD with $M_{X} < 200$ GeV$/c^{2}$ to INEL
+YLabel=$\sigma_\text{SD} / \sigma_\text{inel}$
+# END PLOT
+
+# BEGIN PLOT /ALICE_2012_I1181770/d02-x01-y0
+Title=Production ratios of DD with $\Delta\eta >3$ to INEL
+YLabel=$\sigma_\text{DD} / \sigma_\text{inel}$
+# END PLOT
+
+# BEGIN PLOT /ALICE_2012_I1181770/d03-x01-y0
+Title=Single diffraction cross-section for $M_{X} < 200$ GeV$/c^{2}$
+YLabel=$\sigma_\text{SD}$ [mb]
+# END PLOT
+
+# BEGIN PLOT /ALICE_2012_I1181770/d04-x01-y0
+Title=Double diffraction cross-section for $\Delta\eta >3$
+YLabel=$\sigma_\text{DD}$ [mb]
+# END PLOT
+
+# BEGIN PLOT /ALICE_2012_I1181770/d05-x01-y0
+Title=Inleastic cross-section
+YLabel=$\sigma_\text{inel}$ [mb]
+# END PLOT
