@@ -11,6 +11,7 @@ dist_pkgdata_DATA = \
   ALICE_2010_S8706239.plot \
   ALICE_2011_S8909580.plot \
   ALICE_2011_S8945144.plot \
+  ALICE_2012_I1181770.plot \
   ARGUS_1993_S2653028.plot \
   ARGUS_1993_S2669951.plot \
   ARGUS_1993_S2789213.plot \
