@@ -1,0 +1,140 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.0" package="LWH"/>
+  <dataPointSet name="d01-x01-y01"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="900.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.21" errorPlus="0.03" errorMinus="0.03"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d01-x01-y02"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="2760.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.20" errorPlus="0.07" errorMinus="0.08"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d01-x01-y03"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.20" errorPlus="0.04" errorMinus="0.07"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y01"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="900.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.11" errorPlus="0.03" errorMinus="0.03"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y02"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="2760.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.12" errorPlus="0.05" errorMinus="0.05"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y03"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="0.12" errorPlus="0.05" errorMinus="0.04"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d03-x01-y01"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="900.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="11.2" errorPlus="1.6" errorMinus="2.1"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d03-x01-y02"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="2760.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="12.2" errorPlus="3.9" errorMinus="5.3"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d03-x01-y03"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="14.9" errorPlus="3.4" errorMinus="5.9"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d04-x01-y01"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="900.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="5.6" errorPlus="2.0" errorMinus="2.0"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d04-x01-y02"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="2760.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="7.8" errorPlus="3.2" errorMinus="3.2"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d04-x01-y03"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="9.0" errorPlus="2.6" errorMinus="2.6"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d05-x01-y01"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="900.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="52.5" errorPlus="2.0" errorMinus="3.3"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d05-x01-y02"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="2760.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="62.8" errorPlus="2.6832815729997477" errorMinus="4.17612260356422"/>
+  </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d05-x01-y03"
+    title="" path="/REF/ALICE_2012_I1181770" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="7000.0" errorPlus="0.5" errorMinus="0.5"/>
+    <measurement value="73.2" errorPlus="3.2802438933713454" errorMinus="5.2839379254491625"/>
+  </dataPoint>
+  </dataPointSet>
+</aida>
